# C8550-Stable-Diffusion-on-8550DK

./: README.md
StableDiffusion-cpp/: CMakeLists.txt  StableDiffusion.cpp  build.sh
StableDiffusion-cpp/include/opencv/opencv2/: opencv_modules.hpp
StableDiffusion-cpp/include/qnnUtils_8550/Log/: LogUtils.cpp  Logger.hpp
StableDiffusion-cpp/include/utils/: utils_base.h  utils_image.h  utils_tokenizer.h
StableDiffusion-cpp/src/: QnnSampleApp.cpp  diffusion_solver.cpp
StableDiffusion-cpp/src/models/: DecoderModel.cpp  TextEncoderModel.cpp  UNet.cpp
StableDiffusion-cpp/src/qcom/: QCOMModel.cpp  time_all.cpp
StableDiffusion-cpp/src/scheduler/: scheduler_dpmpp_2m.cpp  scheduler_dpmpp_2m_karras.cpp  scheduler_euler_a.cpp
StableDiffusion-cpp/src/utils/: utils_image.cpp
doc/: C8550-Stable Diffusion on 8550DK.docx
